# LEAKER

./: .gitignore  LICENSE  README.md  demo.py  examples.py  requirements.txt  setup.py
.github/workflows/: pylint.yml  python-app.yml
data/figures/: different-data_attack-demo.tikz  sampled-data_attack-demo.tikz  stat-close_demo_cr1.tikz  stat-close_demo_cr2.tikz  stat-close_demo_cr3.tikz  stat-close_demo_metric.tikz
data_sources/Google_Trends/: aux_knowledge.pkl  aux_knowledge_original_sap.pkl  aux_knowledge_original_sap_chosen_kw.pkl  aux_knowledge_original_sap_no_chosen_kw.pkl  aux_knowledge_original_sap_no_chosen_kw_our_enron.pkl  chosen_keywords.pkl  queries_obs.pkl  queries_real.pkl
evaluation/Google/: README.txt  eval_google_attacks.py  eval_google_stats.py  index_google.py
evaluation/keyword/: eval_dmv_red.py  eval_dmv_red_simulation.py  eval_keyword_attacks.py  eval_keyword_stats.py  eval_relational_attacks.py  eval_relational_error_simulation.py  index_aol.py  index_dmv.py  index_enron.py  index_mimiciv.py  index_tair.py  index_uci.py  index_wikipedia.py  leap_experiment.py  power_law_dmv.py
evaluation/range/: eval_range_db.py  eval_range_sdss.py  index_range.py
leaker/: __init__.py
leaker/api/: __init__.py  attack.py  backend.py  constants.py  dataset.py  document.py  leakage_pattern.py  query_space.py  range.py  range_database.py  (+2 more)
leaker/pq-trees/: CMakeLists.txt  __init__.py  compile_pq-trees.sh  wrappers.cpp
tests/: random_words_processed.txt  test_arr_attack.py  test_arr_estimators.py  test_laa_eval.py  test_queryspace.py  test_relational.py
(+184 files in other folders)
